# rbcpack

./: README.md  acoustics2d.m  contrib.html  contributors.txt  genindex.html  optimal_cosines.m  run_acoustics2d_free.m  search.html
ASAExample/: DGsetup.m  GradVandermonde1D.m  README  acoustics2d_CRBC_corner.m  acoustics2d_CRBC_cornermat.m  acoustics2d_CRBC_face.m  optimal_cosinesP.m  run_acoustics2d_duct.m
Utilities/: optimal_cosines.h  optimal_cosines_API.f90
YeeCRBC/: CMakeLists.txt  INSTALL  LGPL  LICENSE  README  gen_use.html  yee_TM.html
YeeCRBC/Matlab/: klein_gordon_1d_DAB.m  klein_gordon_2d_corner_DAB.m  optimal_cosines.m  wave_2d_DAB.m
YeeCRBC/docs/source/: 3D_Yee_example_in_C.rst  conf.py  gen_use.rst  index.rst  pubs.rst  theory_overview.rst  wave_eq_example_in_Cpp.rst  yee_TM.rst  zcite.bib.bak
YeeCRBC/docs/source/images/: 3d_wg_old.eps  edge.eps  face.eps
YeeCRBC/examples/: CMakeLists.txt  CMakeLists.txt.in
YeeCRBC/examples/2d_yee/: CMakeLists.txt  yee_TM.c
YeeCRBC/examples/3d_yee/: CMakeLists.txt  yee.c
YeeCRBC/examples/wave_cxx/: CMakeLists.txt  wave_eq.cpp
YeeCRBC/examples/yee_mpi/: solutions.cpp  solutions.hpp  yee_mpi.cpp  yee_mpi.cxx  yee_mpi.hpp  yee_mpi_example.cpp
YeeCRBC/quick_start/: sf.html
YeeCRBC/src/: 2d_crbc_api.cpp  2d_crbc_api.h  3d_yee_api.cpp  3d_yee_api.hpp  3d_yee_api_cxx.cpp  3d_yee_crbc_api.h  CMakeLists.txt  boundary_properties.hpp  config.h  config.h.in  crbc_data.hpp  crbc_updates.hpp  crbc_updates.hpp.orig  recursions.hpp  test_config.h  wave_equations.hpp
YeeCRBC/src/cmake/: Config.cmake.in
YeeCRBC/src/grid/: box.hpp  box_iterator.hpp  grid_array.hpp  point.hpp
YeeCRBC/src/optimal_cosines/: optimal_cosines.c
YeeCRBC/src/util/: CMakeLists.txt  hdf5_interface.cpp  hdf5_interface.hpp
_sources/YeeCRBC/: 1d_kg_matlab.rst.txt  pubs.rst.txt
_sources/YeeCRBC/quick_start/: te.rst.txt
docs/: CNAME  objects.inv  searchindex.js
docs/Utilities/: index.html
docs/YeeCRBC/: 2d_wave_matlab.html  3D_Yee_example_in_C.html  examples.html  index.html  install.html  matlab_examples.html  supported_problems.html  yee_TM.html
docs/_sources/YeeCRBC/: 3D_Yee_example_in_C.rst.txt
docs/source/: conf.py  contrib.rst  index.rst
docs/source/Utilities/: index.rst
docs/source/YeeCRBC/: 1d_kg_matlab.rst  2d_kg_matlab.rst  2d_wave_matlab.rst  3D_Yee_example_in_C.rst  examples.rst  index.rst  install.rst  matlab_examples.rst  spelling_wordlist.txt  supported_problems.rst  theory_overview.rst  wave_eq_example_in_Cpp.rst  yee_TM.rst  yee_citations.bib  yee_mpi.rst  zcite.bib
docs/source/YeeCRBC/images/: 2d_free_short_old.eps  3d_wg_order_old.eps  edge.fig  edge_ex.eps  edge_ey.eps  edge_ez.eps  parplate_energy_old.eps  parplate_err_old.eps  parplate_order_old.eps
docs/source/YeeCRBC/quick_start/: Makefile  ex.rst  index.rst  te.rst  wg.rst
docs/source/_templates/: custom_sidebar.html  layout.html
documentation/docs/: Makefile
documentation/docs/source/YeeCRBC/: 2d_wave_matlab.rst
documentation/docs/source/YeeCRBC/images/: grid.xcf
documentation/docs/source/YeeCRBC/quick_start/: conf.py
documentation/source/YeeCRBC/: 3D_Yee_example_in_C.rst  index.rst  results.rst  yee_TM.rst
documentation/source/YeeCRBC/doxygen/: warnings
documentation/source/YeeCRBC/images/: 2d_free_long_old.eps  2d_free_old.eps  2d_wg_old.eps
documentation/source/YeeCRBC/quick_start/: index.rst  make.bat  sf.rst  te.avi
html/YeeCRBC/: theory_overview.html  yee_mpi.html
html/YeeCRBC/quick_start/: index.html
